# WeatherStation-418

./: README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: black.yml  lint.yml
backend/: database.py  main.py  requirements.txt
devops/: devops.md  docker-compose.yml
devops/backend/: Dockerfile
devops/firmware/: Dockerfile  firmware-main.py  host.json
docs/: architecture.md  communication_protocol.md  database_schema.md  index.md  security_model.md  sensors.md
firmware/: bme680.py  host.json  main.py  pins.json
frontend/: base.html  history.html  index.html  login.html  settings.html
frontend/static/: history.js  logout.js  settings.js
