[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherstation-418"
version = "0.1.0"
requires-python = ">=3.11"

[tool.black]
line-length = 88
extend-exclude = "firmware/bme680.py"

[tool.ruff]
extend-exclude = [
    "firmware/bme680.py"
]
line-length = 88
select = ["E", "F", "W"]
